# tuning-miner

./: .gitignore  docker-compose.yaml  pyproject.toml
axolotl/: asgi.py  example_payload.json
axolotl/config/: base.yml  config_handler.py  string.yaml
axolotl/docker/: Dockerfile  requirements.txt
axolotl/endpoints/: training.py
axolotl/models/: custom_dataset_type.py  dataset_type.py  file_format.py  miner_task_request.py  miner_task_response.py  training_request.py
axolotl/utilities/: dataset.py  huggingface.py
